DRAKEN-4606: Added attachment resources for decision.
